--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ nav a:hover {
 /* Hero Section */
 .hero {
     height: 100vh;
-    background-image: url('../images/hero.jpg');
+    background-image: url('../images/japan.jpg');
     background-size: cover;
     background-position: center;
     display: flex;
