--- a/css/style.css
+++ b/css/style.css
@@ -187,7 +187,7 @@ nav a:hover {
     width: 300px;
     height: 300px;
     object-fit: cover;
-    border: 2px solid #ddd;
+    border: 5px solid #0c0c0c;
 }
 
 /* Kontakt Section */
